<resources>
    <string name="app_name">M-Hourz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close  navigation drawer</string>
    <string name="title_activity_billing_info">BillingInfo</string>
    <string name="ShopName">Shop /Company  Details:</string>
    <string name="ContactPersonName">Contact person  :</string>
    <string name="Contact">Mobile Number :</string>
    <string name="EMAIL">Email ID:</string>
    <string name="Address">Address :</string>
    <string name="State_Code">State Code :</string>
    <string name="GST_IN">GSTIN:</string>
    <string name="GST_STATUS">GST Status :</string>
    <string name="Item_Name">Item Name</string>
    <string name="Qty">Qty</string>
    <string name="Unit_Price">Unit Price:</string>
    <string name="Total">Total :</string>
    <string name="Next">Next</string>
    <string name="Taxable_Value">Taxable Value:</string>
    <string name="Total_GST">Total GST :</string>
    <string name="Shipping">Shipping :</string>
    <string name="Charges">Charges :</string>
    <string name="AmountPaid">Amount Paid :</string>
    <string name="Balance">Balance :</string>
    <string name="Reverse_charges">Reverse charges :</string>
    <string name="Download">Download</string>
    <string name="View">View</string>
    <string name="Share">Share</string>
    <string name="Print">Print</string>
    <string name="Date">Date:</string>
    <string name="Sr">Sr no</string>
    <string name="InvoiceNumber">Invoice No.</string>
    <string name="Amount">Amount</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="PaymentModeWithHy">Payment Mode :</string>
    <string name="TotalSsale">Total Sale</string>
    <string name="ChequeNumber">Cheque Number</string>
    <string name="BankName">Bank Name</string>
    <string name="ChequeName">Name</string>
    <string name="TypeOfPayment">Type of Payment</string>
    <string name="CompanyName">Company  Name</string>
    <string name="RateOfInterest">Rate of Interest</string>
    <string name="TimeOfBound">Time of Bound</string>
    <string name="policyNumber">Policy Number</string>
    <string name="PanCard">PAN Card No :</string>
    <string name="IfcNumber">IFSC Number :</string>
    <string name="Account">Account number</string>
    <string name="QuotationNumber">Quotation No :</string>
    <string name="QuotationNum">Quotation No</string>
    <string name="Discount">Discount</string>
    <string name="ProceedToQuotation">Proceed To Quotation</string>
    <string name="Rs">Rs</string>
    <string name="ViewCart">View Cart</string>
    <string name="ProceedToBilling">Proceed To Billing</string>
    <string name="ProceedToPay">Proceed To Pay</string>
    <string name="Specification">Specification:</string>
    <string name="DiscountedPrice">Discounted Price :</string>
    <string name="placeOfSuppler">Place of Supplier :</string>
    <string name="transactionId">Transaction No :</string>
    <string name="otherCharges">Other Chrages :</string>
    <string name="TotalAmount">Total Amount :</string>
    <string name="BalancePaid">Amount Paid :</string>
    <string name="BalanceDue">Balance Due :</string>
    <string name="Success">Success</string>
    <string name="Pending">Pending</string>
    <string name="AccountHolderName">Account Holder Name :</string>
    <string name="AccountNumber">Account Number :</string>
    <string name="Remark">Remark of Bill Payment :</string>
    <string name="PaymentStatus">Payment Status</string>
    <string name="chequeDate">Cheque Date :</string>
    <string name="ItemName">Item Name :</string>
    <string name="ProductName">Product Name :</string>
    <string name="ItemPrice">Item Price :</string>
    <string name="StockStorage">Stock Storage:</string>
    <string name="Mrp">Mrp:</string>
    <string name="DiscountItem">Discount :</string>
    <string name="GST">GST :</string>
    <string name="HSN">HSN :</string>
    <string name="TotalPrice">Total Price :</string>
    <string name="actMain_msg_device_connecting">Connecting device</string>
    <string name="actMain_msg_device_connect_succes">Successful connection</string>
    <string name="actMain_msg_device_connect_fail">connection fail</string>
    <string name="actDiscovery_msg_starting_device">Starting Bluetooth</string>
    <string name="dialog_title_sys_err">System Error</string>
    <string name="actDiscovery_msg_start_bluetooth_fail">Bluetooth device start fail</string>
    <string name="btn_ok">Ok</string>
    <string name="actMain_device_info">Info</string>
    <string name="actDiscovery_bond_nothing">Nothing</string>
    <string name="actDiscovery_bond_bonded">Bounded</string>
    <string name="actDiscovery_msg_select_device">Select Device Need to Connect</string>
    <string name="actDiscovery_msg_not_find_device">Device not found</string>
    <string name="actDiscovery_msg_scaning_device"><![CDATA[Scanning for Bluetooth Devices, Please wait]]></string>
    <string name="actDiscovery_msg_bluetooth_not_start">Bluetooth is not enabled</string>
    <string name="device_type_bredr">BR/EDR Bluetooth</string>
    <string name="device_type_ble">Low Energy Bluetooth</string>
    <string name="device_type_dumo">Duplex mode Bluetooth</string>
    <string name="actDiscovery_name">BT</string>
    <string name="dateTime"><![CDATA[Date & Time :]]></string>
    <string name="Item">Item</string>
    <string name="TotalQty">Total Qty :</string>
    <string name="Total_Amount">Total Amount :</string>
    <string name="AddRemaining">Add Remaining</string>
    <string name="Custmessage">Get  in touch with Customer</string>
    <string name="save">Save</string>
    <string name="notification">Notifications for M-hourz Users</string>
    <string name="know">Know who we are !</string>
    <string name="wearehere">We are here to Help You !</string>
    <string name="UserManual">User Manul to M-Hourz</string>
    <string name="Quation">Quations and Answers  on M-Hourz</string>
    <string name="Tutorails">Tutorails (M-Hourz video)</string>
    <string name="LetsKnows">Let\'s Us Know What you think about us ?</string>
    <string name="policies"> M-Hourz Policies</string>
    <string name="Services">Services</string>
    <string name="DesignInindai">Design with</string>
    <string name="In">IN</string>
    <string name="MHOURZ">M-Hourz</string>
    <string name="Updates">Updates</string>
    <string name="Team">Team M-Hourz</string>
    <string name="NewsFeed">News Feed</string>
    <string name="OfficalAddress">Behind Mohurle Hospital, Near Bank of Maharashtra, Durgapur Road, Tukum, Chandrapur (M.S) 442401, INDIA</string>
    <string name="formoreQuariy">For Queries and Questions Feel Free to Call Our Customer Care  Facility </string>
    <string name="phoneNumber">+91 7861998866</string>
    <string name="Support">Support@markethourz.com</string>
    <string name="techSupport">Info@mechatrontechgear.com  </string>
    <string name="techSupportTeam">team@mechatrontechgear.com</string>
    <string name="Mission">Our Mission</string>
    <string name="misssionString">To provide the facility for managing business digitally and also enabling Businesses to accept payments in multiple modes possible.</string>
    <string name="sayno">So never so No to your customers when they ask for Cashless Payment.</string>
    <string name="About">About</string>
    <string name="Descriptions">Description :</string>
    <string name="TimePeriod">Please Select Time Period for Analysis</string>
    <string name="ViewAnalysis">  View Analysis</string>
    <string name="PleaseSelectMonth">(Please Seclect Month for Analysis)</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="HightSalingDay">Highest Selling Days</string>
    <string name="HightPurchaseDay">Highest Purchase Day</string>
    <string name="CustomerDay">Highest Customer Day</string>
    <string name="HighestSaletoCustDay">Highest Sale to Customer</string>
    <string name="RepetitiveDay">Repetitive Cutomer</string>
    <string name="SaleCatDay">Top Sale Product Category</string>
    <string name="TopSaleCatDay">Top Selling Products</string>
    <string name="TotalAnalysis">Total Analysis</string>
    <string name="PleaseSelectDate"> ( Please select Date Range for Analysis )</string>
    <string name="HightSalingWeek">Highest Selling in Week</string>
    <string name="HightSalingMonth">Highest selling in Month</string>
    <string name="HightPurchaseMonth">Highest Purchase in  Month</string>
    <string name="HightSaleMonth">Highest Expense in Week</string>
    <string name="HightSalingYear">Highest selling in Year</string>
    <string name="HightPurchaseYear">Highest Purchase in Year</string>
    <string name="HightSaleYear">Highest Sale in Year</string>
    <string name="Year">Year</string>
    <string name="Month">Month</string>
    <string name="HightSaleDay">Highest sales Day</string>
    <string name="HightPurchaseWeek">Highest Purchase Week</string>
    <string name="RepetetiveCustomer">Repetative Customer</string>
    <string name="CustomerName">Customer Name</string>
    <string name="ProductType">Product Type</string>
    <string name="TotalSale">Total Sale</string>
    <string name="TopSallingProductCategories">Top Selling Product Categories</string>
    <string name="TaxableValue">Taxable Value</string>
    <string name="TotalGST">Total GST</string>
    <string name="Quaility">Output Laibility</string>
    <string name="Input">Input Laibility</string>
    <string name="profit">Profit:</string>
    <string name="loss">Loss:</string>
    <string name="BusinessStatus">Business Status</string>
    <string name="TotalExpenses">Total Expenses</string>
    <string-array name="payment_array">
        <item>Cash</item>
        <item>Account</item>
    </string-array>
    <string-array name="payment_mode">
        <item>Cash Payment</item>
        <item>Debit Card payment</item>
        <item>Credit  Card payment</item>
        <item>Net Banking</item>
        <item>E Wallet</item>
        <item>Paytm</item>
        <item>UPI apps</item>
        <item>Bhim App</item>
        <item>Using Banking details</item>
        <item>By Cheque</item>
        <item>EMI</item>
    </string-array>
    <string-array name="measurement_unit">
        <item>Select Measurment unit</item>
        <item>Unit</item>
        <item>Gram</item>
        <item>Liter</item>
        <item>Meter</item>
    </string-array>
    <string name="AccountCreated">Account Created</string>
    <string name="signup_message">Your M Hourz account has been created, \n Please wait for approval from our side.</string>
    <string name="thanksfor_singup">Thanks for Signing Up with us !</string>
    <string name="welcome">Wel-Come to M Hourz family...</string>
    <string name="jumptopage">Jump to Home Page</string>
    <string name="ServicesName">Service Name</string>
    <string name="SACCODE">SAC CODE</string>
    <string name="DurationSpan">Duration Span</string>
    <string name="DueReminderDate">Due Reminder Day</string>
    <string name="DiscountInRs">Discount in Rs :</string>
    <string name="TypeOfService">Type of Service</string>
    <string name="PinCode">Pin Code</string>
    <string name="PersonalDocument">Personal Document</string>
    <string name="ID_NUM">ID Number :</string>
    <string name="Mobile">Mobile :</string>
    <string name="District">District</string>
    <string name="DocumentType">Document Type</string>
    <string name="TermAndConditions">Terms and Conditions</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="RefundPolicy">Refund Policy</string>
    <string name="TermsofUse">Terms of use</string>
    <string name="ServiceAgrement">Service Agreement</string>
    <string name="EmailAbuse">Email Abuse</string>
    <string name="Disclaimer">Disclaimer</string>
</resources>