<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/exp_date"
        android:text="@string/Date"
        android:textColor="@color/color_grey"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/exp_mode"
        android:text="Payment"
        android:textColor="@color/color_grey"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/exp_amount"
        android:text="@string/Amount"
        android:textColor="@color/color_grey"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/exp_balance"
        android:layout_weight="1"
        android:text="@string/Balance"
        android:textColor="@color/color_grey"
        android:layout_height="wrap_content" />

</LinearLayout>